# MCePtion

./: .gitattributes  .gitignore  README.md  framework.yaml  pyproject.toml
docs/: ARCHITECTURE.md  CI_GATE_EXECUTION_PLAN.md  COPY_IN_VALIDATION_EXECUTION_PLAN.md  DESIGN_DECISIONS.md  ENVIRONMENT_REPLICATION.md  GUIDELINES_TOOL.md  IMPLEMENTATION_STACK.md  MANAGER_API_CONTRACT.md  META_MCP_CONTRACT.md  NEXT_SESSION_PLAN.md  OPERATIONS.md  PLAN.md  PRD.md  ROADMAP.md  SECURITY_MODEL.md  SERVER_CONTRACT.md  TEST_STRATEGY.md
environment/: README.md
gate/: README.md  cli.py  config.py  gate.yaml  runner.py  size-baseline.json
guidelines/: README.md  SERVER_AUTHORING_GUIDELINES.md
guidelines/examples/python-stdio-fastmcp/: CAPABILITIES.md  README.md  mcp-server.yaml  pyproject.toml
scripts/: README.md  gate.ps1  gate.py  rescan-services.ps1  run-tests.ps1  start-framework.ps1  start-meta-stdio.ps1  status-framework.ps1  stop-framework.ps1  validate-server.ps1
servers/: README.md
src/mcp_hub/: __init__.py  api_server.py  cli.py  config.py  dashboard.py  dashboard_style.py  discovery.py  framework.py  guidelines.py  manager.py  meta_catalog.py  meta_server.py  models.py  simple_yaml.py  validation.py
templates/python-stdio-server/: CAPABILITIES.md  README.md  mcp-server.yaml
tests/: test_api_server.py  test_discovery.py  test_framework_lifecycle.py  test_gate_config.py  test_gate_output.py  test_gate_size.py  test_gate_structure.py  test_guidelines.py  test_manager.py  test_meta_server.py  test_validation.py  workspace_utils.py
(+13 files in other folders)
